--- a/main/translations/app_en.xml
+++ b/main/translations/app_en.xml
@@ -1042,6 +1042,107 @@
         <source>Failed to delete item</source>
         <translation>Failed to delete item</translation>
     </message>
+    <!-- Import/Export -->
+    <message>
+        <source>📦 Import/Export</source>
+        <translation>📦 Import/Export</translation>
+    </message>
+    <message>
+        <source>Import/Export</source>
+        <translation>Import/Export</translation>
+    </message>
+    <message>
+        <source>Export</source>
+        <translation>Export</translation>
+    </message>
+    <message>
+        <source>Export all saved content to CSV file</source>
+        <translation>Export all saved content to CSV file</translation>
+    </message>
+    <message>
+        <source>Encoding:</source>
+        <translation>Encoding:</translation>
+    </message>
+    <message>
+        <source>📤 Export to CSV</source>
+        <translation>📤 Export to CSV</translation>
+    </message>
+    <message>
+        <source>Import</source>
+        <translation>Import</translation>
+    </message>
+    <message>
+        <source>Import content from CSV file (Group, Content, Title)</source>
+        <translation>Import content from CSV file (Group, Content, Title)</translation>
+    </message>
+    <message>
+        <source>📥 Import from CSV</source>
+        <translation>📥 Import from CSV</translation>
+    </message>
+    <message>
+        <source>CSV Format</source>
+        <translation>CSV Format</translation>
+    </message>
+    <message>
+        <source>Column 1: Group Name</source>
+        <translation>Column 1: Group Name</translation>
+    </message>
+    <message>
+        <source>Column 2: Content</source>
+        <translation>Column 2: Content</translation>
+    </message>
+    <message>
+        <source>Column 3: Title (optional)</source>
+        <translation>Column 3: Title (optional)</translation>
+    </message>
+    <message>
+        <source>Export to CSV</source>
+        <translation>Export to CSV</translation>
+    </message>
+    <message>
+        <source>Group</source>
+        <translation>Group</translation>
+    </message>
+    <message>
+        <source>Export Successful</source>
+        <translation>Export Successful</translation>
+    </message>
+    <message>
+        <source>Exported {count} items to CSV file.</source>
+        <translation>Exported {count} items to CSV file.</translation>
+    </message>
+    <message>
+        <source>Export Failed</source>
+        <translation>Export Failed</translation>
+    </message>
+    <message>
+        <source>Failed to export: {error}</source>
+        <translation>Failed to export: {error}</translation>
+    </message>
+    <message>
+        <source>Import from CSV</source>
+        <translation>Import from CSV</translation>
+    </message>
+    <message>
+        <source>Import Successful</source>
+        <translation>Import Successful</translation>
+    </message>
+    <message>
+        <source>Imported {count} items.</source>
+        <translation>Imported {count} items.</translation>
+    </message>
+    <message>
+        <source>Import Failed</source>
+        <translation>Import Failed</translation>
+    </message>
+    <message>
+        <source>No valid data found in CSV file.</source>
+        <translation>No valid data found in CSV file.</translation>
+    </message>
+    <message>
+        <source>Failed to import: {error}</source>
+        <translation>Failed to import: {error}</translation>
+    </message>
 </context>
 
 <!-- ========== Settings Dialog - Clipboard Settings ========== -->
